--- a/src/app/dashboard/navbar/navbar.component.html
+++ b/src/app/dashboard/navbar/navbar.component.html
@@ -7,9 +7,15 @@
       </a>
   
       <div class="d-flex flex-row-reverse me-5 ">
-        <div class="p-3"><a data-bs-toggle="modal" href="#exampleModal" class="text-decoration-none text-secondary fw-semibold fs-6" role="button">Login</a></div>
-        <div class="p-3"><a routerLink="Register" class="text-decoration-none text-secondary fw-semibold fs-6" >Register</a></div>
-        <div class="p-3"><a routerLink="write-a-blog" class="text-decoration-none text-secondary fw-semibold fs-6">Write a Blog</a></div>
+        <div class="p-3">
+          <a routerLink="/auth/login" class="allblogs" target="_blank">Login</a>
+        </div>
+        <div class="p-3">
+          <a routerLink="/auth/newuser" class="allblogs" target="_blank">Register</a>
+        </div>
+        <div class="p-3">
+          <a routerLink="write-a-blog" class="text-decoration-none text-secondary fw-semibold fs-6">Write a Blog</a>
+        </div>
       </div>
     </div>
   </nav>
