autherization and comment

--- a/src/app/blog/singleblog/singleblog.component.html
+++ b/src/app/blog/singleblog/singleblog.component.html
@@ -26,6 +26,7 @@
                 </section>
             </article>
             <!-- Comments section-->
+            <a [routerLink]="['/blog', blogId ,'comments',]" class="btn btn-primary" target="_blank">View Blog</a>
             <section class="mb-5">
                 <div class="card bg-light">
                     <div class="card-body">
