--- a/src/app/dashboard/navbar/navbar.component.html
+++ b/src/app/dashboard/navbar/navbar.component.html
@@ -14,7 +14,7 @@
           <a routerLink="/auth/newuser" class="allblogs" target="_blank">Register</a>
         </div>
         <div class="p-3">
-          <a routerLink="write-a-blog" class="text-decoration-none text-secondary fw-semibold fs-6">Write a Blog</a>
+          <a routerLink="/blogs/write" class="text-decoration-none text-secondary fw-semibold fs-6">Write a Blog</a>
         </div>
       </div>
     </div>
