--- a/src/app/blog/listblogs/listblogs.component.html
+++ b/src/app/blog/listblogs/listblogs.component.html
@@ -1,130 +1,22 @@
-<!-- <p>all-blog works!</p>
-<div>
-    <ul>
-        
-            {{blog.title}}{{blog.content}}
-        </li>
-    </ul>
-</div> -->
-<!-- <p>all-blogs works!</p> -->
 
 <div class="container-fluid">
     <p class="fw-bold fs-2 mt-3 ms-4 me-4 border-bottom pb-3 mb-5 border-secondary">
         All Blogs
     </p>
 </div>
-
-
 <div class="container-fluid blog">
     <div class="row">
         <div class="col-sm-4 card_padding" *ngFor="let blog of listBlogs">
-            <div class="inner">
-                <div class="card">
-                    <img class="card-img-top" src="../../../assets/Images/blog-1.avif" alt="Card image cap">
-                    <div class="card-body">
-                        <h5 class="card-title">{{blog.title}}</h5>
-                        <p class="card-text">{{blog.content}}</p>
-                        <a [routerLink]="['/blogs/blogtitle', blog._id]" class="btn btn-primary" target="_blank">View Blog</a>
-                    </div>
-                </div>
-            </div>
+         <a [routerLink]="['/blogs/blogtitle', blog._id]" target="_blank" class="cardlink">
+                  <div class="card h-100">
+                      <img [src]="blog.imageUrl||defaultimage" class="card-img-top" alt="...">
+                      <div class="card-body">
+                          <h5 class="card-title fw-bold text-dark">{{blog.title}}</h5>
+                          <a [routerLink]="['/blogs/blogtitle', blog._id]" class="btn btn-primary" target="_blank">View Blog</a>
+                      </div>
+                  </div>
+           </a>
         </div>
     </div>
-    <!-- <div class="col-sm-4">
-            <div class="card">
-                <img class="card-img-top" src="../../../assets/Images/blog-1.avif" alt="Card image cap">
-                <div class="card-body">
-                    <h5 class="card-title">Special title treatment</h5>
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-            </div>
-        </div>
-        <div class="col-sm-4">
-            <div class="card">
-                <img class="card-img-top" src="../../../assets/Images/blog-1.avif" alt="Card image cap">
-                <div class="card-body">
-                    <h5 class="card-title">Special title treatment</h5>
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-            </div>
-        </div> -->
-    <!-- <div class="row">
-        <div class="col-md-4">
-            <div class="card" style="width: 20rem;">
-                <img class="card-img-top" src="../../../assets/Images/blog-1.avif" alt="Card image cap">
-                <div class="card-body">
-                  <h5 class="card-title">{{blog.title}}</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-              </div>
-              <div class="card" style="width: 30rem;">
-                <img class="card-img-top" src="../../../assets/Images/blog-1.avif" alt="Card image cap">
-                <div class="card-body">
-                  <h5 class="card-title">{{blog.title}}</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-              </div>
-              <div class="card" style="width: 30rem;">
-                <img class="card-img-top" src="../../../assets/Images/blog-1.avif" alt="Card image cap">
-                <div class="card-body">
-                  <h5 class="card-title">{{blog.title}}</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-              </div>
-        </div>
-    </div>
-</div> -->
-    <!-- <div class="col-md">
-            <a href="" class="text-decoration-none">
-                <div class="inner">
-                    <img src="../../../assets/Images/blog-2.avif" alt="" class="img-fluid" width="814" height="457" />
-                </div>
-                <p class="fw-semibold fs-4 pt-3 pb-5 text-dark">
-                    Your Future is created by you
-                </p>
-            </a>
-        </div>
-        <div class="col-md">
-            <a href="" class="text-decoration-none">
-                <div class="inner">
-                    <img src="../../../assets/Images/blog-3.avif" alt="" class="img-fluid" width="814" height="457" />
-                </div>
-                <p class="fw-semibold fs-4 pt-3 pb-5 text-dark">
-                    Your Future is created by you
-                </p>
-            </a>
-        </div>
-    </div> -->
-
-    <!-- <div class="row">
-      <div class="col-md">
-        <a href="" class="text-decoration-none">
-          <div class="inner">
-            <img src="../../../assets/images/blog_4.avif" alt="" class="img-fluid" width="814" height="457">
-          </div>
-          <p class="fw-semibold fs-4 pt-3 pb-5 text-dark">Your Future is created by you</p>
-        </a>
-      </div>
-      <div class="col-md">
-        <a href="" class="text-decoration-none">
-          <div class="inner">
-            <img src="../../../assets/images/blog_5.avif" alt="" class="img-fluid" width="814" height="457">
-          </div>
-          <p class="fw-semibold fs-4 pt-3 pb-5 text-dark">Your Future is created by you</p>
-        </a>
-      </div>
-      <div class="col-md">
-        <a href="" class="text-decoration-none">
-          <div class="inner">
-            <img src="../../../assets/images/blog_6.avif" alt="" class="img-fluid" width="814" height="457">
-          </div>
-          <p class="fw-semibold fs-4 pt-3 pb-5 text-dark">Your Future is created by you</p>
-        </a>
-      </div>
-    </div> -->
-    <!-- </div> -->
+ 
+   
