--- a/src/app/blog/singleblog/singleblog.component.html
+++ b/src/app/blog/singleblog/singleblog.component.html
@@ -1,73 +1,107 @@
 <div class="container mt-5">
-    <div class="row">
-        <div class="col-lg-8">
-            <!-- Post content-->
-            <article blogDetails>
-                <!-- Post header-->
-                <header class="mb-4">
-                    <!-- Post title-->
-                    <h1 class="fw-bolder mb-1">{{blogDetails.title}}</h1>
-                    <!-- Post meta content-->
-                    <div class="text-muted fst-italic mb-2">Posted on {{blogDetails.postedDate | date}} by {{blogDetails._id}}</div>
-                    <!-- Post categories-->
-                    <a class="badge bg-secondary text-decoration-none link-light" href="#!">Web Design</a>
-                    <a class="badge bg-secondary text-decoration-none link-light" href="#!">Freebies</a>
-                </header>
-                <!-- Preview image figure-->
-                <figure class="mb-4"><img class="img-fluid rounded" src="../../../assets/Images/blog-1.avif" alt="..." /></figure>
-                <!-- Post content-->
-                <section class="mb-5">
-                    <p class="fs-5 mb-4">Science is an enterprise that should be cherished as an activity of the free human mind. Because it transforms who we are, how we live, and it gives us an understanding of our place in the universe.</p>
-                </section>
-            </article>
-            <!-- Comments section-->
-            <a [routerLink]="['/blog', blogId ,'comments',]" class="btn btn-primary" target="_blank">comment</a>
-            <section class="mb-5">
-                <div class="card bg-light">
-                    <div class="card-body">
-                        <app-comment></app-comment>
-                    </div>
-                </div>
-            </section>
+  <div class="row">
+    <div class="col-lg-8">
+      <!-- Post content-->
+      <article blogDetails class="shadow-lg mb-5 bg-white rounded p-5">
+        <!-- Post header-->
+        <header class="mb-4">
+          <!-- Post title-->
+          <h1 class="fw-bolder mb-1">{{ blogDetails.title }}</h1>
+          <!-- Post meta content-->
+          <div class="text-muted fst-italic mb-2">
+            Posted on {{ blogDetails.postedDate | date }} by
+            {{ blogDetails._id }}
+          </div>
+          <!-- Post categories-->
+          <a
+            class="badge bg-secondary text-decoration-none link-light"
+            href="#!"
+            >Web Design</a
+          >
+          <a
+            class="badge bg-secondary text-decoration-none link-light"
+            href="#!"
+            >Freebies</a
+          >
+        </header>
+
+        <div class="icon w-5 h-5">
+          <i class="fa-solid fa-ellipsis-vertical"></i>
         </div>
-        <!-- Side widgets-->
-        <div class="col-lg-4">
-            <!-- Search widget-->
-            <div class="card mb-4">
-                <div class="card-header">Search</div>
-                <div class="card-body">
-                    <div class="input-group">
-                        <input class="form-control" type="text" placeholder="Enter search term..." aria-label="Enter search term..." aria-describedby="button-search" />
-                        <button class="btn btn-primary" id="button-search" type="button">Go!</button>
-                    </div>
-                </div>
+        <!-- Preview image figure-->
+        <figure class="mb-4">
+          <img
+            class="img-fluid rounded w-100"
+            [src]="blogDetails.imageUrl"
+            alt="..."
+          />
+        </figure>
+        <!-- Post content-->
+        <section class="mb-5">
+          <p>{{ blogDetails.content }}</p>
+        </section>
+      </article>
+      <!-- Comments section-->
+      <section class="mb-5">
+        <section class="mb-5">
+          <div class="card bg-light">
+            <div class="card-body">
+              <app-comment></app-comment>
             </div>
-            <!-- Categories widget-->
-            <div class="card mb-4">
-                <div class="card-header">Categories</div>
-                <div class="card-body">
-                    <div class="row">
-                        <div class="col-sm-6">
-                            <ul class="list-unstyled mb-0">
-                                <li><a href="#!">Web Design</a></li>
-                                <li><a href="#!">HTML</a></li>
-                                <li><a href="#!">Freebies</a></li>
-                            </ul>
-                        </div>
-                        <div class="col-sm-6">
-                            <ul class="list-unstyled mb-0">
-                                <li><a href="#!">JavaScript</a></li>
-                                <li><a href="#!">CSS</a></li>
-                                <li><a href="#!">Tutorials</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- Side widget-->
-            <div class="card mb-4">
-                <div class="card-header">Side Widget</div>
-                <div class="card-body">You can put anything you want inside of these side widgets. They are easy to use, and feature the Bootstrap 5 card component!</div>
-            </div>
-        </div>
+          </div>
+        </section>
+      </section>
     </div>
+    <!-- Side widgets-->
+    <div class="col-lg-4">
+      <!-- Search widget-->
+      <div class="card mb-4">
+        <div class="card-header">Search</div>
+        <div class="card-body">
+          <div class="input-group">
+            <input
+              class="form-control"
+              type="text"
+              placeholder="Enter search term..."
+              aria-label="Enter search term..."
+              aria-describedby="button-search"
+            />
+            <button class="btn btn-primary" id="button-search" type="button">
+              Go!
+            </button>
+          </div>
+        </div>
+      </div>
+      <!-- Categories widget-->
+      <div class="card mb-4">
+        <div class="card-header">Categories</div>
+        <div class="card-body">
+          <div class="row">
+            <div class="col-sm-6">
+              <ul class="list-unstyled mb-0">
+                <li><a href="#!">Web Design</a></li>
+                <li><a href="#!">HTML</a></li>
+                <li><a href="#!">Freebies</a></li>
+              </ul>
+            </div>
+            <div class="col-sm-6">
+              <ul class="list-unstyled mb-0">
+                <li><a href="#!">JavaScript</a></li>
+                <li><a href="#!">CSS</a></li>
+                <li><a href="#!">Tutorials</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Side widget-->
+      <div class="card mb-4">
+        <div class="card-header">Side Widget</div>
+        <div class="card-body">
+          You can put anything you want inside of these side widgets. They are
+          easy to use, and feature the Bootstrap 5 card component!
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
