--- a/src/app/dashboard/home/home.component.html
+++ b/src/app/dashboard/home/home.component.html
@@ -1,2 +1,5 @@
 <app-navbar></app-navbar>
+<!-- <app-banner></app-banner> -->
 <app-recentblog></app-recentblog>
+<app-nxt-banner></app-nxt-banner>
+<app-footer></app-footer>
