--- a/src/app/dashboard/recentblog/recentblog.component.html
+++ b/src/app/dashboard/recentblog/recentblog.component.html
@@ -1,8 +1,9 @@
 <!-- Blog Grid Start here -->
 <div class="container-fluid blog_header">
     <p class="fw-bold fs-2 mt-3 ms-4 me-4 border-bottom pb-3 mb-5 border-secondary">
-      Most Recent Blogs <span>
-      <a routerLink="/blog/blogs" class="allblogs" target="_blank">View All blogs</a></span>
+      Most Recent Blogs 
+      <span class="d-flex flex-row-reverse text-secondary fw-semibold">
+      <a routerLink="/blog/blogs" class="allblogs" target="_self">View All blogs</a></span>
     </p>
 </div>
 
