--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,4 +1,4 @@
-
+<!-- 
 <div class="container">
     <div class="row justify-content-center">
         <div class="col-md-6">
@@ -39,4 +39,68 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
+
+
+<!-- <!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>Talent Portal</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/css/style.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+</head> -->
+
+    <section class="h-100 bgimg">
+		<header class="py-3 mb-4">
+			<div class="container d-flex flex-wrap justify-content-center">
+			  <a href="/" class="d-flex align-items-center mb-3 mb-lg-0 me-lg-auto text-dark text-decoration-none">
+				<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTfxOmhBy9N06InPK-TwMk9abz-EPgzF6GmLrG4OfUeqrLem5_uFIOx2Fpesfjrw94ETA&usqp=CAU" alt="logo" width="150">
+			  </a>
+			</div>
+		  </header> 
+		<div class="container h-100">
+			<div class="row justify-content-sm-center h-100">
+				<div class="col-xxl-4 col-xl-5 col-lg-5 col-md-7 col-sm-9">
+					<div class="card shadow-lg">
+						<div class="card-body p-5">
+							<h1 class="fs-4 card-title fw-bold mb-4 text_heading">User Login/Admin Login</h1>
+							<form method="POST" class="needs-validation" novalidate="" autocomplete="off">
+								<div class="mb-3">
+									<label class="mb-2 text-muted col-form-label-sm" for="email">Username</label>
+									<input id="email" type="email" class="form-control form-control-sm" name="email" value="" placeholder="Enter Usename" required autofocus>
+									<div class="invalid-feedback">
+										Email is invalid
+									</div>
+								</div>
+								<div class="mb-3">
+									<div class="mb-2 w-100">
+										<label class="text-muted col-form-label-sm" for="password">Password</label>
+									</div>
+									<input id="password" type="password" class="form-control form-control-sm" name="password" placeholder="Enter Password" required>
+								    <div class="invalid-feedback">
+								    	Password is required
+							    	</div>
+								</div>
+
+								<div class="d-flex align-items-center">
+									<button type="submit" class="btn btn-primary btn-sm ms-auto">
+										<a class="link-nav" href="index.html"> LOGIN</a>
+									</button>
+								</div>
+							</form>
+						</div>
+						<div class="card-footer py-3 border-0">
+							<div class="text-center">
+								New user ? <a href="" class="text-dark">Register</a>
+							</div>
+						</div>
+					</div>
+
+				</div>
+			</div>
+		</div>
+	</section>
+
