--- a/src/app/dashboard/navbar/navbar.component.html
+++ b/src/app/dashboard/navbar/navbar.component.html
@@ -1,21 +1,49 @@
-
 <!-- Navbar Start here -->
-<nav class="navbar sticky-top bg-white shadow p-2 mb-1 bg-body rounded">
-    <div class="container-fluid">
-      <a class="navbar-brand ms-5 fw-bold fs-2" href="#">
-        WriteIt
-      </a>
-  
-      <div class="d-flex flex-row-reverse me-5 ">
-        <div class="p-3">
-          <a routerLink="/auth/login" class="allblogs" target="_blank">Login</a>
-        </div>
-        <div class="p-3">
-          <a routerLink="/auth/newuser" class="allblogs" target="_blank">Register</a>
-        </div>
-        <div class="p-3">
-          <a routerLink="write-a-blog" class="text-decoration-none text-secondary fw-semibold fs-6">Write a Blog</a>
-        </div>
+<nav class="navbar navbar-expand-sm sticky-top bg-white shadow p-2 mb-1 bg-body rounded">
+  <div class="container-fluid">
+    <a class="navbar-brand ms-5 fw-bold fs-2" href="#">
+      <img src="../../../assets/Images/zensar_logo.png" alt="" height="35" width="45">
+      ZenWrite
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="d-flex flex-row-reverse me-2">
+      <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0 text-center">
+          <li  class="nav-item">
+            <a class="nav-link" routerLink="" href="#">Write a Blog</a>
+          </li>
+          <li *ngIf="!loggedin()" class="nav-item" >
+            <a class="nav-link" routerLink="/login" >Login</a>
+          </li>
+          <!-- <li *ngIf="loggedin()" class="nav-item" >
+            <a class="nav-link" (click)="onLogout()" >Logout</a>
+          </li> -->
+          <div class="dropdown">
+            <a class="btn btn-secondary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Dropdown link
+            </a>
+
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">Action</a></li>
+              <li><a class="dropdown-item" href="#">Another action</a></li>
+              <li><a class="dropdown-item" href="#">Something else here</a></li>
+            </ul>
+          </div>
+        </ul>
       </div>
     </div>
-  </nav>
+
+  </div>
+</nav>
+
+<!-- Navbar End here -->
+
+
+<!-- <div class="d-flex flex-row-reverse me-5 ">
+  <div class="p-3"><a data-bs-toggle="modal" href="#exampleModal" class="text-decoration-none text-secondary fw-semibold fs-6" role="button">Login</a></div>
+  <div class="p-3"><a routerLink="Register" class="text-decoration-none text-secondary fw-semibold fs-6" >Register</a></div>
+  <div class="p-3"><a routerLink="write-a-blog" class="text-decoration-none text-secondary fw-semibold fs-6">Write a Blog</a></div>
+</div> -->
