--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,42 +1,10 @@
+<form #loginForm="ngForm" (ngSubmit)="onLogin(loginForm)">
+  <label>Username</label>
+  <input type="text" required ngModel name="userName"> <br>
+  <label>Password</label>
+  <input type="password" required ngModel name="password"> <br>
+  <button [disabled]="!loginForm.valid" type="submit">login</button>
+</form>
 
-<div class="container">
-    <div class="row justify-content-center">
-        <div class="col-md-6">
-            <h1>{{title}}</h1>
-            <hr />
-            <div class="signup-form">
-                <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-                    <div class="form-group">
-                        <div class="form-row">
-                            <div class="col-md-3">
-                                <label>Email</label>
-                            </div>
-                            <div class="col-md-9">
-                                <input formControlName="email" class="form-control" />
-                            </div>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <div class="form-row">
-                            <div class="col-md-3">
-                                <label>Password</label>
-                            </div>
-                            <div class="col-md-9">
-                                <input formControlName="password" type="password" class="form-control" />
-                            </div>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <div class="form-row">
-                            <div class="col-md-3">
-                            </div>
-                            <div class="col-md-9">
-                                <button type="submit" class="btn btn-primary">Login</button>
-                            </div>
-                        </div>
-                    </div>
-                </form>
-            </div>
-        </div>
-    </div>
-</div>
+
+
