--- a/src/app/dashboard/recentblog/recentblog.component.html
+++ b/src/app/dashboard/recentblog/recentblog.component.html
@@ -1,8 +1,10 @@
 <!-- Blog Grid Start here -->
+
+<div class="container">
 <div class="container-fluid blog_header">
     <p class="fw-bold fs-2 mt-3 ms-4 me-4 border-bottom pb-3 mb-5 border-secondary">
       Most Recent Blogs <span>
-      <a routerLink="/blog/blogs" class="allblogs" target="_blank">View All blogs</a></span>
+      <a routerLink="/blog/blogs" class="allblogs">View All blogs</a></span>
     </p>
 </div>
 
@@ -46,5 +48,5 @@
     </div>
   </div>
 </div>
-
+</div>
 <!-- Blog Grid End here -->
