--- a/src/app/blog/singleblog/singleblog.component.html
+++ b/src/app/blog/singleblog/singleblog.component.html
@@ -1,90 +1,101 @@
 <div class="container mt-5">
-    <div class="row">
-        <div class="col-lg-8">
-            <!-- Post content-->
-            <article blogDetails class=" shadow-lg  mb-5 bg-white rounded  p-5" >
-                <!-- Post header-->
-                <header class="mb-4 ">
-                    <!-- Post title-->
-                    <h1 class="fw-bolder mb-1">{{blogDetails.title}}</h1>
-                    <!-- Post meta content-->
-                    <div class="text-muted fst-italic mb-2">Posted on {{blogDetails.postedDate | date}} by {{blogDetails._id}}</div>
-                    <!-- Post categories-->
-                    <a class="badge bg-secondary text-decoration-none link-light" href="#!">Web Design</a>
-                    <a class="badge bg-secondary text-decoration-none link-light" href="#!">Freebies</a>
-                </header>
+  <div class="row">
+    <div class="col-lg-8">
+      <article blogDetails class="shadow-lg  bg-white rounded p-5">
+        <div class="mb-4 header">
+          <div class="">
+          <h1 class="fw-bolder mb-1">{{ blogDetails.title }}</h1>
+          <div class="text-muted fst-italic mb-2">
+            Posted on {{ blogDetails.postedDate | date }} by
+            {{ blogDetails.authorName }}
+          </div>
+        </div>
+          <div class="icon" *ngIf="showbutton">
+            <fa-icon [icon]="faEllipsisVertical" style="font-size:20px" (click)="toggleicon()"></fa-icon>
+            <div class="dropdown-content" *ngIf="togglebutton" >
+              <ul>
+              <li *ngIf="edit" (click)="updateblog(blogDetails._id)">Edit</li>
+              <li *ngIf="delete" (click)="deleteblog(blogDetails._id)"> Delete</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <figure class="mb-4">
+          <img
+            class="img-fluid rounded w-100" 
+            [src]="blogDetails.imageUrl"
+            alt="..."
+          />
+        </figure>
+        <section class="mb-5">
+          <p>{{ blogDetails.content }}</p>
+        </section>
+      </article>
+      <!-- Comments section-->
+           <section class="mb-5 likes">
+            likes and no of Comments
+           </section>
 
-                <div class="icon w-5 h-5"><i class="fa-solid fa-ellipsis-vertical "></i></div>
-                <!-- Preview image figure-->
-                <figure class="mb-4"><img class="img-fluid rounded  w-100" [src]="blogDetails.imageUrl" alt="..." /></figure>
-                <!-- Post content-->
-                <section class="mb-5">
-                    <p>{{blogDetails.content}}</p>
-                </section>
-            </article>
-            <!-- Comments section-->
-            <section class="mb-5">
-                <div class="card bg-light">
-                    <div class="card-body">
-                        <!-- Comment form-->
-                        <form class="mb-4"><textarea class="form-control" rows="3" placeholder="Join the discussion and leave a comment!"></textarea>
-                            <button class="btn btn-primary mt-2" type="submit"> Add Comment</button>
-                        </form>
-                        <!-- Comment with nested comments-->
-                        <div class="d-flex mb-4">
-                            <!-- Parent comment-->
-                            <div class="flex-shrink-0"><img class="rounded-circle" src="https://dummyimage.com/50x50/ced4da/6c757d.jpg" alt="..." /></div>
-                            <div class="ms-3">
-                                <div class="fw-bold">Commenter Name</div>
-                                If you're going to lead a space frontier, it has to be government; it'll never be private enterprise. Because the space frontier is dangerous, and it's expensive, and it has unquantified risks.
-                               
-                               
-                            </div>
-                        </div>
-    
-                       
-                    </div>
-                </div>
-            </section>
-        </div>
-        <!-- Side widgets-->
-        <div class="col-lg-4">
-            <!-- Search widget-->
-            <div class="card mb-4">
-                <div class="card-header">Search</div>
-                <div class="card-body">
-                    <div class="input-group">
-                        <input class="form-control" type="text" placeholder="Enter search term..." aria-label="Enter search term..." aria-describedby="button-search" />
-                        <button class="btn btn-primary" id="button-search" type="button">Go!</button>
-                    </div>
-                </div>
+      <section class="mb-5">
+        <section class="mb-5">
+          <div class="card bg-light">
+            <div class="card-body">
+              <app-comment></app-comment>
             </div>
-            <!-- Categories widget-->
-            <div class="card mb-4">
-                <div class="card-header">Categories</div>
-                <div class="card-body">
-                    <div class="row">
-                        <div class="col-sm-6">
-                            <ul class="list-unstyled mb-0">
-                                <li><a href="#!">Web Design</a></li>
-                                <li><a href="#!">HTML</a></li>
-                                <li><a href="#!">Freebies</a></li>
-                            </ul>
-                        </div>
-                        <div class="col-sm-6">
-                            <ul class="list-unstyled mb-0">
-                                <li><a href="#!">JavaScript</a></li>
-                                <li><a href="#!">CSS</a></li>
-                                <li><a href="#!">Tutorials</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- Side widget-->
-            <div class="card mb-4">
-                <div class="card-header">Side Widget</div>
-                <div class="card-body">You can put anything you want inside of these side widgets. They are easy to use, and feature the Bootstrap 5 card component!</div>
-            </div>
-        </div>
+          </div>
+        </section>
+      </section>
     </div>
+    <!-- Side widgets-->
+    <div class="col-lg-4">
+      <!-- Search widget-->
+      <div class="card mb-4">
+        <div class="card-header">Search</div>
+        <div class="card-body">
+          <div class="input-group">
+            <input
+              class="form-control"
+              type="text"
+              placeholder="Enter search term..."
+              aria-label="Enter search term..."
+              aria-describedby="button-search"
+            />
+            <button class="btn btn-primary" id="button-search" type="button">
+              Go!
+            </button>
+          </div>
+        </div>
+      </div>
+      <!-- Categories widget-->
+      <div class="card mb-4">
+        <div class="card-header">Categories</div>
+        <div class="card-body">
+          <div class="row">
+            <div class="col-sm-6">
+              <ul class="list-unstyled mb-0">
+                <li><a href="#!">Web Design</a></li>
+                <li><a href="#!">HTML</a></li>
+                <li><a href="#!">Freebies</a></li>
+              </ul>
+            </div>
+            <div class="col-sm-6">
+              <ul class="list-unstyled mb-0">
+                <li><a href="#!">JavaScript</a></li>
+                <li><a href="#!">CSS</a></li>
+                <li><a href="#!">Tutorials</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Side widget-->
+      <div class="card mb-4">
+        <div class="card-header">Side Widget</div>
+        <div class="card-body">
+          You can put anything you want inside of these side widgets. They are
+          easy to use, and feature the Bootstrap 5 card component!
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
