--- a/src/app/blog/singleblog/singleblog.component.css
+++ b/src/app/blog/singleblog/singleblog.component.css
@@ -10,3 +10,48 @@
   }
 }
 
+.header{
+  display: flex;
+  justify-content: space-between;
+  max-width: 100%;
+}
+.icon{
+  cursor: pointer;
+  position: relative;
+}
+.dropdown-content{
+  position: absolute;
+  background-color: rgb(255, 255, 255);
+  box-shadow: 10px 10px 44px 0px rgba(0,0,0,0.75);
+}
+
+.dropdown-content ul{
+  padding-left: 0;
+  margin-top: 0rem;
+  margin-bottom: 0rem;
+  width: 100%;
+}
+
+.dropdown-content ul li a{
+  text-decoration: none;
+}
+.dropdown-content ul li {
+  text-align: center;
+  padding-left: 0.4rem;
+  padding-right: 0.4rem;
+  width: 100%;
+  list-style: none;
+  color: #0d6efd
+}
+.dropdown-content ul li:hover{
+  background-color:gray;
+  color:white
+}
+
+.likes{
+  background-color: red;
+}
+
+/* padding-left: 1vw;
+padding-right: 1vw; */
+
